Source/WebCore/testing/MockGamepadProvider.cpp
@@ -132,6 +132,7 @@ bool MockGamepadProvider::setMockGamepadButtonValue(unsigned index, unsigned but
     }
 
     m_mockGamepadVector[index]->setButtonValue(buttonIndex, value);
+    setShouldMakeGamepadsVisibile();
     gamepadInputActivity();
     return true;
 }
@@ -143,8 +144,7 @@ void MockGamepadProvider::gamepadInputActivity()
 
     m_shouldScheduleActivityCallback = false;
     callOnMainThread([this]() {
-        for (auto& client : m_clients)
-            client->platformGamepadInputActivity();
+        dispatchPlatformGamepadInputActivity();
 
         m_shouldScheduleActivityCallback = true;
     });
